Closed
Bug 907373
Opened 12 years ago
Closed 12 years ago
-moz-os-version media query is not working on Windows 8.1
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla30
People
(Reporter: ntim, Assigned: Paenglab)
References
Details
(Keywords: addon-compat, Whiteboard: [Australis:P-])
Attachments
(2 files)
|
1.07 KB,
patch
|
jimm
:
review+
lsblakk
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
|
981 bytes,
text/html
|
Details |
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/30.0.1573.2 Safari/537.36 OPR/17.0.1232.0 (Edition Developer)
Steps to reproduce:
Use -moz-os-version media query like this :
>@media (-moz-os-version:windows-win8) {
>//specific rules
>}
Actual results:
The media query didn't work
Expected results:
The media query should work. You should either provide another value windows-win8.1 or make -moz-os-version:windows-win8 work for Windows 8.1.
Updated•12 years ago
|
Component: Untriaged → Widget: Win32
Product: Firefox → Core
Comment 1•12 years ago
|
||
Not sure if this is related or not, but the User Agent string reported by Firefox running on Windows 8.1 contains "Windows NT 6.2", not "Windows NT 6.3" as Internet Explorer 11 does.
For example my User Agent string right now is:
"Mozilla/5.0 (Windows NT 6.2; WOW64; rv:23.0) Gecko/20100101 Firefox/23.0"
| Reporter | ||
Comment 2•12 years ago
|
||
It's Opera Developer user agent. I can't sign in with persona on Firefox.
| Reporter | ||
Updated•12 years ago
|
OS: Windows 8 → Windows 8.1
| Reporter | ||
Updated•12 years ago
|
Hardware: x86_64 → All
Updated•12 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•12 years ago
|
Whiteboard: [Australis:P-]
| Reporter | ||
Updated•12 years ago
|
Flags: needinfo?(jmathies)
Comment 3•12 years ago
|
||
Yeah I think we can blend these two together. Looks like all we need to do is add WIN8_1_VERSION to the case statement here -
http://mxr.mozilla.org/mozilla-central/source/widget/windows/nsLookAndFeel.cpp#431
Tim, do you want to pick this up?
Flags: needinfo?(jmathies)
| Assignee | ||
Comment 4•12 years ago
|
||
Is it okay like this?
Assignee: nobody → richard.marti
Status: NEW → ASSIGNED
Attachment #8377221 -
Flags: review?(jmathies)
Comment 5•12 years ago
|
||
Comment 6•12 years ago
|
||
Comment on attachment 8377221 [details] [diff] [review]
patch
working as expected.
Attachment #8377221 -
Flags: review?(jmathies) → review+
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
Comment 7•12 years ago
|
||
Rich, your patch needs an updated checkin message, it's missing the approval flag from me.
Comment 8•12 years ago
|
||
Keywords: checkin-needed
| Assignee | ||
Comment 9•12 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #7)
> Rich, your patch needs an updated checkin message, it's missing the approval
> flag from me.
Ryan normally adds it on check-in.
Comment 10•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Comment 11•12 years ago
|
||
From the Australis perspective, we don't need to uplift this for our 29. If you think it's important to uplift, please change the fx29 status and request approval on the patch.
status-firefox29:
--- → wontfix
| Reporter | ||
Comment 12•12 years ago
|
||
(In reply to :Gijs Kruitbosch from comment #11)
> From the Australis perspective, we don't need to uplift this for our 29. If
> you think it's important to uplift, please change the fx29 status and
> request approval on the patch.
Well, the only impact if this is not uplifted is that tree list items (such as the ones in about:config), will have the aero styling on Windows 8.1.
Comment 13•12 years ago
|
||
Can we uplift this to mozilla-release for a possible chemspill related to the multiple bugs about unreadable background tabs (bug 1004576 for example)?
tracking-firefox29:
--- → ?
Updated•12 years ago
|
Flags: needinfo?(lsblakk)
Comment 14•12 years ago
|
||
Comment on attachment 8377221 [details] [diff] [review]
patch
[Approval Request Comment]
Regression caused by (bug #): need windows8.1 compatibility for theme support
User impact if declined: bugs such as bug 1004482
Testing completed (on m-c, etc.): been on 30 and 31 for some time now
Risk to taking this patch (and alternatives if risky): none expected
String or IDL/UUID changes made by this patch: none
Attachment #8377221 -
Flags: approval-mozilla-release?
Comment 15•12 years ago
|
||
We will uplift this patch if we decide to do a 29.0.1 release with bug 1004482 fixed.
Until then, we won't approve this patch.
Flags: needinfo?(lsblakk)
Comment 16•12 years ago
|
||
It is still unclear how much effect bug 1004482 (or bug 1004576, which it got duped to) will have when it comes to helping these cases in the wild, as that bug looks to only affect people who have slid two of the sliders to extreme values.
We know that the patch in this particular bug though is of particular concern to *anyone* running Windows 8.1 that switched their machine to use a slightly dark theme, even without any extreme tweaking of colors.
Flags: needinfo?(sledru)
Updated•12 years ago
|
Comment 17•12 years ago
|
||
Comment on attachment 8377221 [details] [diff] [review]
patch
We are going to take this for a non-urgent 29.0.1, please land to m-r asap.
Attachment #8377221 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Flags: needinfo?(sledru)
Comment 18•12 years ago
|
||
reply to Jared Wein [:jaws] (please needinfo? me) from comment #16)
It's a problem if you set Windows in High Contrast mode and don't tweak any settings. We should confirm that this bug fixes those users (although it'd surprise me if it doesn't).
Updated•12 years ago
|
Comment 19•12 years ago
|
||
status-firefox30:
--- → fixed
Comment 20•12 years ago
|
||
Hmm, false alarm :( Seems like this is not a regression, since the regressed bug ID is not provided.
Keywords: regression,
site-compat
Comment 21•12 years ago
|
||
Reproduced with Nightly from 2013-08-20: with the attached testcase, -moz-os-version media query is not working with Windows 8.1.
Verified as fixed with Firefox 29.0.1 (Build ID: 20140506152807) and Firefox 30 beta 2 (Build ID: 20140505140302) on a Microsoft Surface Pro 2 device running Windows 8.1 64bit, Windows 8.1 x32 and Windows 8.1 x64:
Mozilla/5.0 (Windows NT 6.3; rv:29.0) Gecko/20100101 Firefox/29.0
Mozilla/5.0 (Windows NT 6.3; rv:30.0) Gecko/20100101 Firefox/30.0
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:29.0) Gecko/20100101 Firefox/29.0
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:30.0) Gecko/20100101 Firefox/30.0
If I change the High Contrast on Windows 8.1, both x32 and x64, I get this: http://goo.gl/t5H2mp. :Cww, is this what you were describing in comment 18?
Status: RESOLVED → VERIFIED
Flags: needinfo?(cwwmozilla)
Comment 22•12 years ago
|
||
Crap, I posted in this bug and meant to post in bug 1004576.
Flags: needinfo?(cwwmozilla)
You need to log in
before you can comment on or make changes to this bug.
Description
•