Bug 907373 - Fix -moz-os-version media query on Windows 8.1. r=jimm, a=lsblakk